src/main/java/com/example/DiplomaSite/error/DiplomaAssignmentValidationException.java
package com.example.DiplomaSite.error;

public class DiplomaAssignmentValidationException extends RuntimeException{
    public DiplomaAssignmentValidationException(String message) {
        super(message);
    }
}
